--- a/COMMUNITY.html
+++ b/COMMUNITY.html
@@ -1,14 +1,13 @@
-# Sardonyx Community Guidelines
-### as of August 4th, 2023
-## NOTICE
-This document is not written by a legal professional.
+Sardonyx Community Guidelines<br>
+<small>as of August 4th, 2023</small><br>
+<b>NOTICE</b><br>
+This document is not written by a legal professional.<br>
+<b>NOTICE</b><br>
+We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.<br><br>
 
-## NOTICE
-We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.
-
-As a user of our services, you agree to:
-- Avoid harassment
-- Avoid sharing other's private information
-- Never share content you do not have rights to use
-- Avoid sharing 18+ content on our services
+As a user of our services, you agree to:<br>
+- Avoid harassment<br>
+- Avoid sharing other's private information<br>
+- Never share content you do not have rights to use<br>
+- Avoid sharing 18+ content on our services<br>
 - Avoid sharing malicious files, links, or other forms of media on our services
