--- a/PRIVACY.html
+++ b/PRIVACY.html
@@ -1,31 +1,29 @@
-# Sardonyx Privacy Policy
-### as of August 4th, 2023
-## NOTICE
-This document is not written by a legal professional.
+Sardonyx Privacy Policy
+<small>as of August 4th, 2023</small><br>
+<b>NOTICE</b><br>
+This document is not written by a legal professional.<br>
+<b>NOTICE</b><br>
+We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.<br>
+<b>NOTICE</b><br>
+We use MongoDB Atlas to store data. You can find their Privacy Policy [here](https://www.mongodb.com/legal/privacy-policy).<br><br>
 
-## NOTICE
-We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.
+We do not willingly collect private information of our users. We are not responsible for anything caused by you sharing your private information.<br><br>
 
-## NOTICE
-We use MongoDB Atlas to store data. You can find their Privacy Policy [here](https://www.mongodb.com/legal/privacy-policy).
+We may collect your IP address for moderation purposes.<br><br>
 
-We do not willingly collect private information of our users. We are not responsible for anything caused by you sharing your private information.
+We collect information that is needed for our services. This is exclusively limited to:<br><br>
+- Usernames<br>
+- Hashed passwords<br>
+- Profile descriptors (also known as a bio)<br>
+- Posts and comments you create<br>
+- A timestamp of your post creation<br>
+- A timestamp of your last request sent to the server<br>
+- Your profile's ban status and moderation state<br>
+- Likes on posts<br>
+- Reports on posts and comments<br><br>
 
-We may collect your IP address for moderation purposes.
+Upon a breach of user data, we will notify all affected users as soon as possible.<br><br>
 
-We collect information that is needed for our services. This is exclusively limited to:
-- Usernames
-- Hashed passwords
-- Profile descriptors (also known as a bio)
-- Posts and comments you create
-- A timestamp of your post creation
-- A timestamp of your last request sent to the server
-- Your profile's ban status and moderation state
-- Likes on posts
-- Reports on posts and comments
-
-Upon a breach of user data, we will notify all affected users as soon as possible.
-
-Upon a change to this document or the Terms of Service document, we will notify you as soon as possible.
+Upon a change to this document or the Terms of Service document, we will notify you as soon as possible.<br><br>
 
 You may email us for data erasure, a data package, or account ban appeals at getsardonyx@yahoo.com.
