--- a/TOS.html
+++ b/TOS.html
@@ -1,28 +1,26 @@
-# Sardonyx Terms of Service
-### as of August 6th, 2023
-## NOTICE
-This document is not written by a legal professional.
+Sardonyx Terms of Service<br>
+<small>as of August 6th, 2023</small><br>
+<b>NOTICE</b><br>
+This document is not written by a legal professional.<br>
+<b>NOTICE</b><br>
+We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.<br>
+<b>NOTICE</b><br>
+We use MongoDB Atlas to store data. You can find their Privacy Policy <a href="https://www.mongodb.com/legal/privacy-policy">here</a>.<br><br>
 
-## NOTICE
-We, us, our, refers to the "GetSardonyx" project. You, refers to you as a user of the "GetSardonyx" project's services.
+As a user of our services, you are required to adhere to our Community Guidelines.<br><br>
 
-## NOTICE
-We use MongoDB Atlas to store data. You can find their Privacy Policy [here](https://www.mongodb.com/legal/privacy-policy).
+You are also required to be 13 or older to use our services.<br><br>
 
-As a user of our services, you are required to adhere to our Community Guidelines.
+Our services have features in place to make sure users adhere to our Terms of Service and Community Guidelines. These features include, but are not limited to:<br>
+- Account banning<br>
+- Account kicking<br>
+- Reporting posts<br><br>
 
-You are also required to be 13 or older to use our services.
+As a user of our services, you agree to not abuse, evade, or manipulate our safety features.<br><br>
 
-Our services have features in place to make sure users adhere to our Terms of Service and Community Guidelines. These features include, but are not limited to:
-- Account banning
-- Account kicking
-- Reporting posts
+As a user of our services, you agree to not create accounts for scripts or robots.<br><br>
 
-As a user of our services, you agree to not abuse, evade, or manipulate our safety features.
+As a user of our services, you agree that our services may go offline with or without notice.<br><br>
 
-As a user of our services, you agree to not create accounts for scripts or robots.
-
-As a user of our services, you agree that our services may go offline with or without notice.
-
-As a user of our services, you agree to not abuse any discovered vulnerabilites in the platform.
+As a user of our services, you agree to not abuse any discovered vulnerabilites in the platform.<br><br>
 
