--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-# Sardonyx-Legal
-Terms of Service, Privacy Policy, Community Guidelines for Sardonyx.
+Sardonyx-Legal<br>
+Terms of Service, Privacy Policy, Community Guidelines for Sardonyx.<br><br>
 
-[Terms of Service](TOS.md)
+<a href="TOS.html">Terms of Service</a><br><br>
 
-[Privacy Policy](PRIVACY.md)
+<a href="PRIVACY.html">Privacy Policy</a><br><br>
 
-[Community Guidelines](COMMUNITY.md)
+<a href="COMMUNITY.html">Community Guidelines</a>
