--- a/PRIVACY.html
+++ b/PRIVACY.html
@@ -26,4 +26,4 @@ Upon a breach of user data, we will notify all affected users as soon as possibl
 
 Upon a change to this document or the Terms of Service document, we will notify you as soon as possible.<br><br>
 
-You may email us for data erasure, a data package, or account ban appeals at getsardonyx@yahoo.com.
+You may contact us at support@getsardonyx.cc.
