--- a/PRIVACY.html
+++ b/PRIVACY.html
@@ -16,8 +16,7 @@ We collect information that is needed for our services. This is exclusively limi
 - Hashed passwords<br>
 - Profile descriptors (also known as a bio)<br>
 - Posts and comments you create<br>
-- A timestamp of your post creation<br>
-- A timestamp of your last request sent to the server<br>
+- A timestamp of the creation of posts, accounts, comments, and requests<br>
 - Your profile's ban status and moderation state<br>
 - Likes on posts<br>
 - Reports on posts and comments<br><br>
