--- a/TOS.html
+++ b/TOS.html
@@ -18,7 +18,15 @@ Our services have features in place to make sure users adhere to our Terms of Se
 
 As a user of our services, you agree to not abuse, evade, or manipulate our safety features.<br><br>
 
-As a user of our services, you agree to not create accounts for scripts or robots.<br><br>
+As a user of our services, you agree to do these things when using accounts for scripts or robots:<br>
+- Put "Bot" at the end of the account username<br>
+- Send only 1 (one) message per human request<br>
+- Do not collect user profiles or posts without their consent<br>
+- Do not send large amounts of requests<br>
+- Do not use any content on our services to train artifical intelligence models.<br>
+Exceptions to some of these rules can be made, please contact us at support@getsardonyx.cc for more information.<br><br>
+
+As a user of our services, you agree to not impersonate anyone for any reason.<br><br>
 
 As a user of our services, you agree that our services may go offline with or without notice.<br><br>
 
