--- a/TOS.html
+++ b/TOS.html
@@ -1,5 +1,5 @@
 Sardonyx Terms of Service<br>
-<small>as of August 6th, 2023</small><br>
+<small>as of August 28th, 2023</small><br>
 <b>NOTICE</b><br>
 This document is not written by a legal professional.<br>
 <b>NOTICE</b><br>
@@ -23,7 +23,7 @@ As a user of our services, you agree to do these things when using accounts for 
 - Send only 1 (one) message per human request<br>
 - Do not collect user profiles or posts without their consent<br>
 - Do not send large amounts of requests<br>
-- Do not use any content on our services to train artifical intelligence models.<br>
+- Do not use any content on our services to train artifical intelligence models<br>
 Exceptions to some of these rules can be made, please contact us at support@getsardonyx.cc for more information.<br><br>
 
 As a user of our services, you agree to not impersonate anyone for any reason.<br><br>
