--- a/TOS.html
+++ b/TOS.html
@@ -1,5 +1,5 @@
 Sardonyx Terms of Service<br>
-<small>as of August 28th, 2023</small><br>
+<small>as of August 29th, 2023</small><br>
 <b>NOTICE</b><br>
 This document is not written by a legal professional.<br>
 <b>NOTICE</b><br>
@@ -9,7 +9,7 @@ We use MongoDB Atlas to store data. You can find their Privacy Policy <a href="h
 
 As a user of our services, you are required to adhere to our Community Guidelines.<br><br>
 
-You are also required to be 13 or older to use our services.<br><br>
+You are required to be 13 or older to sign up for or log in to our services.<br><br>
 
 Our services have features in place to make sure users adhere to our Terms of Service and Community Guidelines. These features include, but are not limited to:<br>
 - Account banning<br>
@@ -19,7 +19,7 @@ Our services have features in place to make sure users adhere to our Terms of Se
 As a user of our services, you agree to not abuse, evade, or manipulate our safety features.<br><br>
 
 As a user of our services, you agree to do these things when using accounts for scripts or robots:<br>
-- Put "Bot" at the end of the account username<br>
+- Put "BOT" at the end of the account username<br>
 - Send only 1 (one) message per human request<br>
 - Do not collect user profiles or posts without their consent<br>
 - Do not send large amounts of requests<br>
