--- a/TOS.html
+++ b/TOS.html
@@ -30,5 +30,5 @@ As a user of our services, you agree to not impersonate anyone for any reason.<b
 
 As a user of our services, you agree that our services may go offline with or without notice.<br><br>
 
-As a user of our services, you agree to not abuse any discovered vulnerabilites in the platform.<br><br>
+As a user of our services, you agree to not abuse any discovered vulnerabilites in the platform.
 
